--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Songs#show</h1>
 
 Title: <%= @song.title %>
+
+<p> Artist: <%= @song.artist_name %></p>
+
+<p>Genre: <%= @song.genre_name %> </p>
